fixed layout bug for rewards
When the rewards text spans multiple lines the box wouldn't grow to fit the text.

--- a/styles/quest-preview.scss
+++ b/styles/quest-preview.scss
@@ -405,7 +405,6 @@
         .quest-rewards {
 
           .reward {
-            overflow: hidden; 
             flex: 0 0 25px;
           }
 
@@ -424,7 +423,7 @@
 
           .reward-hidden {
             background: rgba(0,0,0,.15);
-            
+
             .reward-image {
               opacity: .5;
             }
@@ -433,9 +432,18 @@
               opacity: .5;
             }
           }
+          
+          .reward-image-container {
+            height: 100%;            
+            flex: 0 0 25px;
+            display: flex;
+            align-items: center;
+            border-radius: 5px 0 0 5px;
+            overflow: hidden;
+            background-color: #222; 
+          }
 
           .reward-image {
-            flex: 0 0 25px;
             width: 25px;
             height: 25px;
             background-size: cover;
